Fix : Slight fix on the layout issue

--- a/ospc-client/styles/globals.css
+++ b/ospc-client/styles/globals.css
@@ -1,10 +1,17 @@
 @tailwindcss base;
 @tailwindcss components;
 @tailwindcss utilities;
-/* html,
-body,
-#__next,
-#__next > div {
-  height: 100%;
+html,
+body {
   margin: 0;
+}
+#__next {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+/* body {
+  @apply antialiased;
 } */
